--- a/services.html
+++ b/services.html
@@ -36,8 +36,8 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt="" style="margin-top: -50px;"></a>
-                    </div>
+                        <a href="./index.html"><img src="img/logo.png" alt="" class="logo1" style="margin-top: -50px;"></a>
+                    </div> 
                 </div>
                 <div class="col-lg-10">
                     <div class="header__nav__option">
